force-app/main/default/objects/Voucher__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>