force-app/main/default/objects/Voucher__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <type>TextArea</type>
</CustomField>