force-app/main/default/objects/Voucher__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost_Center</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>