force-app/main/default/objects/Voucher__c/fields/CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhone__c</fullName>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>