force-app/main/default/objects/Voucher__c/fields/Date_d_annulation__c.field-meta.xml
<CustomField>
    <fullName>Date_d_annulation__c</fullName>
    <description>Il s&apos;affiche sur 2eme RT, mis a jour automatiquement en fonction du champ statut qui passe en &quot;Annulée&quot;</description>
    <label>Date d&apos;annulation</label>
    <type>Date</type>
</CustomField>