force-app/main/default/objects/Voucher__c/fields/Date_de_consommation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_consommation__c</fullName>
    <description>(n&apos;apparait pas à la création) sur 2eme RT, mis à jour automatiquement par BBUS. Mais peut etre modifié à tout moment par le service client</description>
    <label>Date de consommation</label>
    <type>Date</type>
</CustomField>