force-app/main/default/objects/Voucher__c/fields/Date_de_mise_en_peremption__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_en_peremption__c</fullName>
    <description>Il apparait sur 2eme RT seult. 
La date se met automatiquement lorsque le champ statut est sur &quot;Périmée&quot;. 
Mais peut etre modifié à tout moment par le service client. Lorsque le champ statut change de statut, la date de péremption doit s&apos;effacer</description>
    <label>Date de mise en péremption</label>
    <type>Date</type>
</CustomField>