force-app/main/default/objects/Voucher__c/fields/Date_of_use__c.field-meta.xml
<CustomField>
    <fullName>Date_of_use__c</fullName>
    <label>Date of use</label>
    <type>Date</type>
</CustomField>