force-app/main/default/objects/Voucher__c/fields/Demande_d_assistance__c.field-meta.xml
<CustomField>
    <fullName>Demande_d_assistance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Au moment de la création de l&apos;IR ce champ n&apos;apparait pas. 
Ce champ se remplira automatiquement à l&apos;enregistrement de l&apos;IR avec le lien du case associé 
(champ lookup vers le case associé créé)</description>
    <label>Demande d&apos;assistance</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vouchers (Demande d&apos;assistance)</relationshipLabel>
    <relationshipName>Vouchers1</relationshipName>
    <type>Lookup</type>
</CustomField>