force-app/main/default/objects/Voucher__c/fields/Dur_e_de_validit__c.field-meta.xml
<CustomField>
    <fullName>Dur_e_de_validit__c</fullName>
    <label>Durée de validité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 mois</fullName>
            </value>
            <value>
                <fullName>6 mois</fullName>
                <default>true</default>
                <label>6 mois</label>
            </value>
            <value>
                <fullName>12 mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>