force-app/main/default/objects/Voucher__c/fields/Email_du_client__c.field-meta.xml
<CustomField>
    <fullName>Email_du_client__c</fullName>
    <description>(mandatory). Dans le cas où il n&apos;y a pas d&apos;email, rattacher manuellement à un User générique (avec un email générique).
Dans le cas où le client n&apos;a pas d&apos;adresse email, son nom, prénom et téléphone seront a saisir dans le champ commentaire</description>
    <label>Email du client</label>
    <type>Email</type>
</CustomField>