force-app/main/default/objects/Voucher__c/fields/Email_PA__c.field-meta.xml
<CustomField>
    <fullName>Email_PA__c</fullName>
    <formula>Guest_Account__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_PA</label>
    <type>Text</type>
</CustomField>