force-app/main/default/objects/Voucher__c/fields/expireDate__c.field-meta.xml
<CustomField>
    <fullName>expireDate__c</fullName>
    <label>expireDate</label>
    <type>Date</type>
</CustomField>