force-app/main/default/objects/Voucher__c/fields/Guest_Account__c.field-meta.xml
<CustomField>
    <fullName>Guest_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Champ lookup vers Guest Account (qui affichera le Prénom+ Nom du client). Si le GA n&apos;existe pas, possibilité de le créer depuis le lookup. Possibilité de chercher le client par nom ou email</description>
    <label>Guest Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.PersonContact.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vouchers (Guest Account)</relationshipLabel>
    <relationshipName>Vouchers1</relationshipName>
    <type>Lookup</type>
</CustomField>