force-app/main/default/objects/Voucher__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Vouchers (Hotel)</relationshipLabel>
    <relationshipName>Vouchers2</relationshipName>
    <type>Lookup</type>
</CustomField>