force-app/main/default/objects/Voucher__c/fields/Hotel_of_use__c.field-meta.xml
<CustomField>
    <fullName>Hotel_of_use__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel of use</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Vouchers (Hotel of use)</relationshipLabel>
    <relationshipName>Vouchers1</relationshipName>
    <type>Lookup</type>
</CustomField>