force-app/main/default/objects/Voucher__c/fields/Hotel_Validite_Spain__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Validite_Spain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel Validité</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hotel__c.Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Invitations Spain</relationshipLabel>
    <relationshipName>Invitation_Spain</relationshipName>
    <type>Lookup</type>
</CustomField>