force-app/main/default/objects/Voucher__c/fields/Interlocuteur__c.field-meta.xml
<CustomField>
    <fullName>Interlocuteur__c</fullName>
    <description>Interlocuteur =&gt; C&apos;est la personne qui a créé l&apos;invitation  + (Worflow pour dupliquer la valeur du créateur Salesforce) (read only). 
Lorsque l&apos;invitation est créée par le BBUS, ce champ est automatiquement alimenté par BBUS</description>
    <label>Interlocuteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>