force-app/main/default/objects/Voucher__c/fields/Montant_de_Consommation__c.field-meta.xml
<CustomField>
    <fullName>Montant_de_Consommation__c</fullName>
    <label>Montant de Consommation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>