force-app/main/default/objects/Voucher__c/fields/Nature_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Nature_de_la_demande__c</fullName>
    <label>Nature de la demande</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manifestation sportive</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Prospection commerciale</fullName>
            </value>
            <value>
                <fullName>Offre mariage</fullName>
            </value>
            <value>
                <fullName>Réclamation</fullName>
            </value>
            <value>
                <fullName>Prolongation IR-OC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>