force-app/main/default/objects/Voucher__c/fields/Nom_de_l_operation__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_operation__c</fullName>
    <label>Nom de l&apos;opération</label>
    <length>255</length>
    <type>Text</type>
</CustomField>