force-app/main/default/objects/Voucher__c/fields/Numero_de_l_invitation__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_l_invitation__c</fullName>
    <description>This value is sent by BBUS. This number starts with &quot;IR&quot; followed by 8 or 9 digits. For instance : &quot;IR12000OY2&quot; (Pas à la création)</description>
    <label>Numéro de l&apos;invitation</label>
    <length>12</length>
    <type>Text</type>
</CustomField>