force-app/main/default/objects/Voucher__c/fields/OPCO__c.field-meta.xml
<CustomField>
    <fullName>OPCO__c</fullName>
    <description>Filled with the hotel country of the voucher.
Used in voucher sharing rules.</description>
    <label>OPCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>