force-app/main/default/objects/Voucher__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>TEXT(Used_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <type>Text</type>
</CustomField>