force-app/main/default/objects/Voucher__c/fields/Prestation_offerte__c.field-meta.xml
<CustomField>
    <fullName>Prestation_offerte__c</fullName>
    <label>Prestation offerte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6000</fullName>
                <label>Une nuit en chambre 1-2 personnes</label>
            </value>
            <value>
                <fullName>6001</fullName>
                <label>Une nuit en chambre familiale</label>
            </value>
            <value>
                <fullName>6002</fullName>
                <label>Une nuit en chambre 1-2 personnes avec petits déjeuners</label>
            </value>
            <value>
                <fullName>6003</fullName>
                <label>Une nuit en chambre familiale avec petits déjeuners</label>
            </value>
            <value>
                <fullName>6004</fullName>
                <label>Un petit déjeuner</label>
            </value>
            <value>
                <fullName>6005</fullName>
                <label>Deux petits déjeuners</label>
            </value>
            <value>
                <fullName>6006</fullName>
                <label>Trois petits déjeuners</label>
            </value>
            <value>
                <fullName>6007</fullName>
                <label>Quatre petits déjeuners</label>
            </value>
            <value>
                <fullName>60 euros</fullName>
                <label>Voucher 60 euros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>