force-app/main/default/objects/Voucher__c/fields/Rbt_Autre__c.field-meta.xml
<CustomField>
    <fullName>Rbt_Autre__c</fullName>
    <label>Rbt Autre €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>