force-app/main/default/objects/Voucher__c/fields/Rbt_PDJ__c.field-meta.xml
<CustomField>
    <fullName>Rbt_PDJ__c</fullName>
    <label>Rbt PDJ €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>