force-app/main/default/objects/Voucher__c/fields/Responsabilite__c.field-meta.xml
<CustomField>
    <fullName>Responsabilite__c</fullName>
    <label>Responsabilité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11000</fullName>
                <label>Chaîne</label>
            </value>
            <value>
                <fullName>11001</fullName>
                <label>Hôtel</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>