force-app/main/default/objects/Voucher__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Direction générale</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Réseau</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>SRC</fullName>
            </value>
            <value>
                <fullName>SRC Promos</fullName>
            </value>
            <value>
                <fullName>Ventes Corporate</fullName>
            </value>
            <value>
                <fullName>Ventes Loisirs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>