force-app/main/default/objects/Voucher__c/fields/Service_emetteur__c.field-meta.xml
<CustomField>
    <fullName>Service_emetteur__c</fullName>
    <label>Service émetteur</label>
    <length>200</length>
    <type>Text</type>
</CustomField>