force-app/main/default/objects/Voucher__c/fields/Site_de_consommation__c.field-meta.xml
<CustomField>
    <fullName>Site_de_consommation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Apparait seult sur 2eme RT, (un lookup vers objet hotel) 
=&gt; mis à jour automatiquement par BBUS. 
Mais peut etre modifié à tout moment par le service client</description>
    <label>Site de consommation</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Vouchers (Site de consommation)</relationshipLabel>
    <relationshipName>Vouchers3</relationshipName>
    <type>Lookup</type>
</CustomField>