force-app/main/default/objects/Voucher__c/fields/Status_change_request__c.field-meta.xml
<CustomField>
    <fullName>Status_change_request__c</fullName>
    <label>Status change request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>