force-app/main/default/objects/Voucher__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Annulé(e)</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <label>Périmé(e)</label>
            </value>
            <value>
                <fullName>Used</fullName>
                <label>Consommé(e)</label>
            </value>
            <value>
                <fullName>Generated</fullName>
                <label>Emis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>