force-app/main/default/objects/Voucher__c/fields/tech_CaseRecTypeId__c.field-meta.xml
<CustomField>
    <fullName>tech_CaseRecTypeId__c</fullName>
    <description>Get the Case record type Id</description>
    <formula>CASESAFEID( Demande_d_assistance__r.RecordTypeId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_CaseRecTypeId</label>
    <type>Text</type>
</CustomField>