force-app/main/default/objects/Voucher__c/fields/Tech_Last_Data__c.field-meta.xml
<CustomField>
    <fullName>Tech_Last_Data__c</fullName>
    <label>Tech Last Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>