force-app/main/default/objects/Voucher__c/fields/tech_NumberOfIROncase__c.field-meta.xml
<CustomField>
    <fullName>tech_NumberOfIROncase__c</fullName>
    <formula>Demande_d_assistance__r.tech_NumberOfIR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_NumberOfIROncase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>