force-app/main/default/objects/Voucher__c/fields/tech_vPersonalContact__c.field-meta.xml
<CustomField>
    <fullName>tech_vPersonalContact__c</fullName>
    <formula>Guest_Account__r.PersonContact.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_vPersonalContact</label>
    <type>Text</type>
</CustomField>