force-app/main/default/objects/Voucher__c/fields/Telephone_du_client__c.field-meta.xml
<CustomField>
    <fullName>Telephone_du_client__c</fullName>
    <description>Value of the Mobile field on the Person Account.</description>
    <formula>Guest_Account__r.PersonContact.MobilePhone</formula>
    <label>Téléphone du client</label>
    <type>Text</type>
</CustomField>