force-app/main/default/objects/Voucher__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Rbt_Chambre__c +  Rbt_PDJ__c +  Rbt_Autre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>