force-app/main/default/objects/Voucher__c/fields/Type_d_invitation__c.field-meta.xml
<CustomField>
    <fullName>Type_d_invitation__c</fullName>
    <label>Type d&apos;invitation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5000</fullName>
                <default>true</default>
                <label>Remboursé et Invité</label>
            </value>
            <value>
                <fullName>Opération commerciale</fullName>
            </value>
            <value>
                <fullName>Voucher BBH CLUB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>