force-app/main/default/objects/Voucher__c/fields/Used_Amount__c.field-meta.xml
<CustomField>
    <fullName>Used_Amount__c</fullName>
    <label>Used Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>