force-app/main/default/objects/Voucher__c/fields/UsedBy__c.field-meta.xml
<CustomField>
    <fullName>UsedBy__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Booking__r.Person_Account__c, Booking__r.Person_Account__r.FirstName + &quot; &quot; + Booking__r.Person_Account__r.LastName,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used By</label>
    <type>Text</type>
</CustomField>