force-app/main/default/objects/Voucher__c/fields/Validite__c.field-meta.xml
<CustomField>
    <fullName>Validite__c</fullName>
    <description>(read only dès la création, always &quot;Du lundi au dimanche&quot; for IR)</description>
    <label>Validité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9000</fullName>
                <default>true</default>
                <label>Du lundi au dimanche</label>
            </value>
            <value>
                <fullName>Les vendredis, samedis, dimanches ou jours fériés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>